# lab06

./: CMakeLists.txt
.github/workflows/: cmake.yml  make_deb_package.yml  make_dmb_package.yml  make_rpm_package.yml  make_wix_package.yml  packages  packages_with_deb.yml
solver_application/: CMakeLists.txt
